Footer + welcome paragraph fix

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears (oh, and Github Pages).</p>
+              <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears <a href="https://pages.github.com/">(oh, and Github Pages).</a></p>
             </div>
           </div>
         </div>
