--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="jumbotron text-center" id="jumbo" style="margin-bottom:0;">
 
       <div class="container-fluid text-center">
-        <a href="#" id="socials"><i class="fab fa-facebook"></i></a>
-        <a href="#" id="socials"><i class="fab fa-instagram"></i></a>
-        <a href="#" id="socials"><i class="fab fa-twitter"></i></a>
-        <a href="#" id="socials"><i class="fab fa-youtube"></i></a>
-        <a href="#" id="socials"><i class="fab fa-github"></i></a>
+        <a href="https://www.facebook.com/michaelfromyeg" id="socials"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/michaelfromyeg" id="socials"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/michaelfromyeg" id="socials"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" id="socials"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/michaelfromyeg" id="socials"><i class="fab fa-github"></i></a>
       </div>
 
       <img src="Images/mjd-logo-final-large-01.png" alt="City of Edmonton background" width="200" height="200">
@@ -46,19 +46,19 @@
       <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
         <ul class="navbar-nav" style="text-align:center;" id="main">
           <li class="nav-item">
-            <a class="nav-link" href="#">HOME</a>
+            <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">BLOG</a>
+            <a class="nav-link" href="blog.michaeldemar.co">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">EXPERIENCE</a>
+            <a class="nav-link" href="experience.html">EXPERIENCE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">PROJECTS</a>
+            <a class="nav-link" href="projects.html">PROJECTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">CONTACT</a>
@@ -72,23 +72,24 @@
         WELCOME!</h3>
         <p id="welcome">Hi, my name is Michael DeMarco. I’m a student, creator, and free-thinker constantly working to achieve my
           four main goals: impact, influence, innovate, and inspire. Join me on my journey by
-          following me here on my blog and following me on social media @michaelfromyeg on Facebook,
-          Instagram, and Twitter.</p>
+          following me here on my blog and following me on social media @michaelfromyeg on <a href="https://www.facebook.com/michaelfromyeg">Facebook</a>,
+          <a href="https://www.instagram.com/michaelfromyeg">Instagram</a>, and <a href="https://twitter.com/michaelfromyeg">Twitter</a>. Also, this whole website? You can see
+          the code for it on <a href="https://github.com/michaelfromyeg">Github</a>.</p>
         </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
           <div class="row">
-            <div class="center-block">
-              <a href="#" id="socials-footer"><i class="fab fa-facebook"></i></a>
-              <a href="#" id="socials-footer"><i class="fab fa-instagram"></i></a>
-              <a href="#" id="socials-footer"><i class="fab fa-twitter"></i></a>
-              <a href="#" id="socials-footer"><i class="fab fa-youtube"></i></a>
-              <a href="#" id="socials-footer"><i class="fab fa-github"></i></a>
+            <div class="center-block" style="padding-bottom:10px;">
+              <a href="https://www.facebook.com/michaelfromyeg" id="socials-footer"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/michaelfromyeg" id="socials-footer"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/michaelfromyeg" id="socials-footer"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" id="socials-footer"><i class="fab fa-youtube"></i></a>
+              <a href="https://github.com/michaelfromyeg" id="socials-footer"><i class="fab fa-github"></i></a>
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears <a href="https://pages.github.com/">(oh, and Github Pages).</a></p>
+              <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears <a href="https://pages.github.com/">(oh, and Github Pages)</a>.</p>
             </div>
           </div>
         </div>
