forgot to set target

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class="jumbotron text-center" id="jumbo" style="margin-bottom:0;">
 
       <div class="container-fluid text-center">
-        <a href="https://www.facebook.com/michaelfromyeg" id="socials"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/michaelfromyeg" id="socials"><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/michaelfromyeg" id="socials"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" id="socials"><i class="fab fa-youtube"></i></a>
-        <a href="https://github.com/michaelfromyeg" id="socials"><i class="fab fa-github"></i></a>
+        <a href="https://www.facebook.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" target="_blank" id="socials"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-github"></i></a>
       </div>
 
       <img src="Images/mjd-logo-final-large-01.png" alt="City of Edmonton background" width="200" height="200">
@@ -80,11 +80,11 @@
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
           <div class="row">
             <div class="center-block" style="padding-bottom:10px;">
-              <a href="https://www.facebook.com/michaelfromyeg" id="socials-footer"><i class="fab fa-facebook"></i></a>
-              <a href="https://www.instagram.com/michaelfromyeg" id="socials-footer"><i class="fab fa-instagram"></i></a>
-              <a href="https://twitter.com/michaelfromyeg" id="socials-footer"><i class="fab fa-twitter"></i></a>
-              <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" id="socials-footer"><i class="fab fa-youtube"></i></a>
-              <a href="https://github.com/michaelfromyeg" id="socials-footer"><i class="fab fa-github"></i></a>
+              <a href="https://www.facebook.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" target="_blank" id="socials-footer"><i class="fab fa-youtube"></i></a>
+              <a href="https://github.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-github"></i></a>
             </div>
           </div>
           <div class="row">
