--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://github.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-github"></i></a>
       </div>
 
-      <img src="Images/mjd-logo-final-large-01.png" alt="City of Edmonton background" width="200" height="200">
+      <img class="banner-img" src="Images/mjd-logo-final-large-01.png" alt="City of Edmonton background" width="175px" height="175px">
 
       <h1>MICHAEL J. DEMARCO</h1>
       <p><strong>VENI. VIDI. VICI.</strong></p>
