Populated site pages

--- a/contact.html
+++ b/contact.html
@@ -1,87 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>Michael J. DeMarco</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="Images/mjd-logo-final-large-01.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="contact.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <style>
+  .fakeimg {
+    height: 400px;
+    background: #aaa;
+  }
+</style>
 </head>
-
 <body>
 
-  <nav class="navbar navbar-expand-md bg-light navbar-light sticky-top justify-content-center">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-      <ul class="navbar-nav" style="text-align:center;" id="main">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">BLOG</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">EXPERIENCE</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">PROJECTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">CONTACT</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div id="wrapper">
 
-<div class="container-fluid" id="welcome" style="margin-top:50px;">
-  <h1>CONTACT</h1>
-  <p>If you wish to contact me about business related, this is a great medium to do so. Otherwise, I recommend reaching me through Twitter.</p>
-  <p>Thanks for reaching out.</p>
-</div>
+    <div class="jumbotron text-center" id="jumbo" style="margin-bottom:0;">
 
-  <div class="container">
-    <form action="/action_page.php">
-      <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your first name...">
-
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Your last name...">
-
-      <label for="email">Email</label>
-      <input type="text" id="email" name="email" placeholder="Your e-mail...">
-
-      <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Your message..." style="height:200px"></textarea>
-
-      <input type="submit" value="Submit">
-    </form>
-  </div>
-
-  <div class="container-fluid" style="margin-bottom:0px;" id="footer">
-    <div class="row">
-      <div class="center-block">
-        <a href="#" id="socials-footer"><i class="fab fa-facebook"></i></a>
-        <a href="#" id="socials-footer"><i class="fab fa-instagram"></i></a>
-        <a href="#" id="socials-footer"><i class="fab fa-twitter"></i></a>
-        <a href="#" id="socials-footer"><i class="fab fa-youtube"></i></a>
-        <a href="#" id="socials-footer"><i class="fab fa-github"></i></a>
+      <div class="container-fluid text-center">
+        <a href="https://www.facebook.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" target="_blank" id="socials"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-github"></i></a>
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears.</p>
-      </div>
-    </div>
-  </div>
 
-</body>
+      <h1>MICHAEL J. DEMARCO</h1>
+      <p><strong>GET IN TOUCH.</strong></p>
+
+    </div>
+
+    <nav class="navbar navbar-expand-md bg-light navbar-light sticky-top justify-content-center">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+        <ul class="navbar-nav" style="text-align:center;" id="main">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://blog.michaeldemar.co">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experience.html">EXPERIENCE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">PROJECTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container-fluid" id="welcome-panel">
+      <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">CONTACT</h3>
+        <p id="welcome">Get in touch with me through the form below.</p>
+        </div>
+
+        <div class="container-fluid" style="margin-bottom:0px;" id="footer">
+          <div class="row">
+            <div class="center-block" style="padding-bottom:10px;">
+              <a href="https://www.facebook.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.youtube.com/channel/UCohoNm6NqDAetXX6MiaV_RQ" target="_blank" id="socials-footer"><i class="fab fa-youtube"></i></a>
+              <a href="https://github.com/michaelfromyeg" target="_blank" id="socials-footer"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p style="text-align:center;padding-top:10px;">Powered by blood, sweat, and tears <a href="https://pages.github.com/">(oh, and Github Pages)</a>.</p>
+            </div>
+          </div>
+        </div>
+
+      </body>
+      </html>
