--- a/experience.html
+++ b/experience.html
@@ -33,10 +33,8 @@
         <a href="https://github.com/michaelfromyeg" target="_blank" id="socials"><i class="fab fa-github"></i></a>
       </div>
 
-      <img class="banner-img" src="Images/mjd-logo-final-large-01.png" alt="City of Edmonton background" width="175px" height="175px">
-
       <h1>MICHAEL J. DEMARCO</h1>
-      <p><strong>VENI. VIDI. VICI.</strong></p>
+      <p><strong>EXPERIENCE AND SKILLS.</strong></p>
 
     </div>
 
@@ -69,14 +67,14 @@
     </nav>
 
     <div class="container-fluid" id="welcome-panel">
-      <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">
-        WELCOME!</h3>
-        <p id="welcome">Hi, my name is Michael DeMarco. I’m a student, creator, and free-thinker constantly working to achieve my
-          four main goals: impact, influence, innovate, and inspire. Join me on my journey by
-          following me here on my blog and following me on social media @michaelfromyeg on <a href="https://www.facebook.com/michaelfromyeg">Facebook</a>,
-          <a href="https://www.instagram.com/michaelfromyeg">Instagram</a>, and <a href="https://twitter.com/michaelfromyeg">Twitter</a>. Also, this whole website? You can see
-          the code for it on <a href="https://github.com/michaelfromyeg">Github</a>.</p>
+      <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">EXPERIENCE</h3>
+        <p id="welcome">I have experienced.</p>
         </div>
+
+      <div class="container-fluid" id="experience">
+        <h3>Graphic Design</h3>
+        <p>I have designed graphics.</p>
+      </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
           <div class="row">
