Update experience page

--- a/experience.html
+++ b/experience.html
@@ -68,12 +68,79 @@
 
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">EXPERIENCE</h3>
-        <p id="welcome">I have experienced.</p>
+        <p id="welcome">My experiences are consequential to my successes in leadership and life, teaching me numerous invaluable lessons.</p>
         </div>
 
-      <div class="container-fluid" id="experience">
-        <h3>Graphic Design</h3>
-        <p>I have designed graphics.</p>
+
+
+        <div class="container-fluid" id="leadership">
+          <h3>Leadership</h3>
+          <h6>EXERPERIENCED LEADER GUIDED UNDER QUALITY MENTORSHIP.</h6>
+          <ul>
+            <li>Director of McNally Pancake Breakfast 2016, our Junior High Leadership Conference 2016/17, and ‘Tiger Squad (2017),’ a grade-ten orientation program. Moreover, I was co-director of Bike-a-Thon and ran a cultural booth at our Heritage Festival.</li>
+            <li>Initiative work includes time with Youth Engagement Focus Group (YEFG) team, a student voice initiative that works with McNally's administration, McNally Book Club, MASSIVE Volunteering Club, and #NOGOODWAY campaign.</li>
+            <li>Member of Global Opportunities Club, Science Olympics team (2016), Speech and Debate club, soccer team, and volleyball team. For speech and debate, won best speaker at UofA HSMUN 2018, bronze medal at OBA/OJEN Mock Trials, and have competed in numerous other tournaments.</li>
+            <li>Director of student programming for the Canadian Student Leadership Conference 2018, to be hosted here in Edmonton, Student Senator for McNally, and City of Edmonton Youth Councillor.</li>
+            <li>Program coordinator for SUNIA, a week-long model United Nations summer camp that takes place in Nordegg every August.</li>
+            <li>Published in Polar Expressions writing competitions and in the Edmonton Journal for CAPPIES. Samples of writing also available on my blog.</li>
+          </ul>
+          <h6>SKILLS</h6>
+          <ul>
+            <li>Confident communicator, both verbal and written;</li>
+            <li>Able to either within teams or indepently;</li>
+            <li>Diligent and focused;</li>
+            <li>Strives for integrity and humility.</li>
+          </ul>
+        </div>
+
+        <div class="container-fluid" id="parallax1">
+        </div>
+
+        <div class="container-fluid" id="Academia">
+          <h3>Academia</h3>
+          <h6>PASSIONATE LIFELONG LEARNER.</h6>
+          <ul>
+            <li>International Baccalaureate student at McNally high school entering grade twelve year.</li>
+            <li>Maintained an average of 95%+ throughout junior high and high school.</li>
+            <li>Pursue coding projects available on Github.</li>
+            <li>Competed in numerous mathematics competitions.</li>
+            <li>Particularly interested in the intersection of STEM and politics.</li>
+          </ul>
+          <h6>SKILLS</h6>
+          <ul>
+            <li>Confident communicator, both verbal and written</li>
+            <li>Able to either within teams or indepently</li>
+            <li>Diligent and focused</li>
+          </ul>
+        </div>
+
+        <div class="container-fluid" id="parallax2">
+        </div>
+
+        <div class="container-fluid" id="graphicdesign">
+          <h3>Graphic Design</h3>
+          <h6>CAPABLE GRAPHIC DESIGNER THAT LEARNED BY DOING.</h6>
+          <ul>
+            <li>First became interested in graphic design after taking a mix of visual communications and coding classes in junior high, working with Photoshop and Illustrator to create simple projects.</li>
+            <li>In high school, I found infinite room to play, design, and flourish as a designer. I created:
+              <ul>
+                <li>advertisements for our school’s Pancake Breakfast,</li>
+                <li>branding for our Bike-a-Thon, Junior High Leadership Conference (in which I worked with Karen Schiltz, graphic designer for Classic Landscapes), Heritage Festival,</li>
+                <li>and for my initiatives, such as our Book Club, our volunteering club, MASSIVE, and my personal website. I even got approached by our school’s media team to create a logo, which is now used by our photograph teacher as an email signature.</li>
+              </ul>
+            </li>
+            <li>Assisted with branding for Canadian Student Leadership Conference (CSLC) 2018. I worked with a talented graphic designer contracted by Harry Ainlay who walked me through the design process. He worked with my logo designs when eventually drafting our final conference branding.</li>
+            <li>For Student Senate, I was a member of the ‘Time Management’ committee, whose primary focus was creating a resource for students to combat procrastination, for which we decided brochures were best suited. I took on the responsbility of designing the brochures. I used Illustrator, Photoshop, and InDesign to create them. Operating under certain constraints, such as a maximum of three colors, and an amount of content to fit, the brochures were complete. We printed off 600 copies for each school in EPSB.</li>
+          </ul>
+          <h6>SKILLS</h6>
+          <ul>
+            <li>Illustrator, 5 years;</li>
+            <li>InDesign, 1 year;</li>
+            <li>Photoshop, 4 years;</li>
+            <li>Adobe Premiere, 2 years.</li>
+          </ul>
+        </div>
+
       </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
