--- a/experience.html
+++ b/experience.html
@@ -108,9 +108,9 @@
           </ul>
           <h6>SKILLS</h6>
           <ul>
-            <li>Confident communicator, both verbal and written</li>
-            <li>Able to either within teams or indepently</li>
-            <li>Diligent and focused</li>
+            <li>Numeracy skills;</li>
+            <li>Capable writer;</li>
+            <li>Passionate about learning and able to pick up new skills quickly.</li>
           </ul>
         </div>
 
