--- a/experience.html
+++ b/experience.html
@@ -93,7 +93,7 @@
           </ul>
         </div>
 
-        <div class="container-fluid" id="parallax1">
+        <div class="container-fluid" id="parallax">
         </div>
 
         <div class="container-fluid" id="Academia">
@@ -114,7 +114,7 @@
           </ul>
         </div>
 
-        <div class="container-fluid" id="parallax2">
+        <div class="container-fluid" id="parallax">
         </div>
 
         <div class="container-fluid" id="graphicdesign">
