--- a/experience.html
+++ b/experience.html
@@ -91,7 +91,7 @@
           </ul>
         </div>
 
-        <div class="container-fluid" id="Academia">
+        <div class="container-fluid" id="academia">
           <h3>Academia</h3>
           <h6>PASSIONATE LIFELONG LEARNER.</h6>
           <ul>
