--- a/experience.html
+++ b/experience.html
@@ -91,6 +91,8 @@
           </ul>
         </div>
 
+        <div class="container-fluid" id="parallax"></div>
+
         <div class="container-fluid" id="academia">
           <h3>Academia</h3>
           <h6>PASSIONATE LIFELONG LEARNER.</h6>
