--- a/experience.html
+++ b/experience.html
@@ -91,7 +91,7 @@
           </ul>
         </div>
 
-        <div class="container-fluid" id="parallax"></div>
+        <div id="parallax"></div>
 
         <div class="container-fluid" id="academia">
           <h3>Academia</h3>
