--- a/experience.html
+++ b/experience.html
@@ -91,7 +91,7 @@
           </ul>
         </div>
 
-        <div id="parallax"></div>
+        <div id="parallax1"></div>
 
         <div class="container-fluid" id="academia">
           <h3>Academia</h3>
@@ -110,6 +110,8 @@
             <li>Passionate about learning and able to pick up new skills quickly.</li>
           </ul>
         </div>
+
+        <div id="parallax2"></div>
 
         <div class="container-fluid" id="graphicdesign">
           <h3>Graphic Design</h3>
