--- a/projects.html
+++ b/projects.html
@@ -68,74 +68,65 @@
 
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">PROJECTS</h3>
-        <p id="welcome">I have projected.</p>
+        <p id="welcome">Here is a mix of my writing, graphic design, and other projects that are worth showing the world.</p>
         </div>
 
+    <div class="container-fluid" style="max-width:1200px;" id="projectCards">
         <div class="card-columns">
 
-    <a class="card" target="_blank" href="https://www.google.ca"><div class="card">
-      <img class="card-img-top fakeimg" src="" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title that wraps to a new line</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <div class="card">
+            <img class="card-img-top" src="Images/cslc-logo-regular.jpg" alt="CSLC 2018">
+            <div class="card-body">
+              <h5 class="card-title">CSLC 2018 Design</h5>
+              <p class="card-text">I assisted with some of the branding with the Canadian Student Leadership Conference (2018).</p>
+            </div>
+          </div>
+
+          <div class="card p-3">
+            <blockquote class="blockquote mb-0 card-body">
+              <p style="font-size:15px;">It is essential that the student acquire an understanding of and a lively feeling for values. He must acquire a vivid sense of the beautiful and of the morally good. Otherwise he - with his specialized knowledge - more closely resembles a well-trained dog than a harmoniously developed person.</p>
+              <footer class="blockquote-footer">
+                <small class="text-muted">
+                  Albert Einstein, <cite title="Source Title">"Education for Independent Thought"</cite> (NYT)
+                </small>
+              </footer>
+            </blockquote>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/staffspeaks-01.jpg" alt="SUNIA Branding">
+            <div class="card-body">
+              <h5 class="card-title">SUNIA Design</h5>
+              <p class="card-text">I am actively helping with the branding of SUNIA, an annual week-long summer camp.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/infographic-01.jpg" alt="Italy infographic">
+            <div class="card-body">
+              <h5 class="card-title">McNally Event Branding</h5>
+              <p class="card-text">A collection of the design I've done for McNally projects.</p>
+            </div>
+          </div>
+
+          <div class="card text-left">
+            <div class="card-body">
+              <h5 class="card-title">Far-Right Populism: Globalization's Troubling Consequence</h5>
+              <p class="card-text">'The resurgence of the far-right is inextricably linked to the zenith of third-wave globalization. The development of income inequality...' My grade ten research assignment explores globalization as a cause of populism.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/711_logo_demarco.jpg" alt="Illustrator Logo">
+            <div class="card-body">
+              <h5 class="card-title">Illustrator Mix</h5>
+              <p class="card-text">Random projects created in Adobe Illustrator.</p>
+            </div>
+          </div>
+
+        </div>
+
       </div>
-    </div></a>
-    <div class="card p-3">
-      <blockquote class="blockquote mb-0 card-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <footer class="blockquote-footer">
-          <small class="text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card">
-      <img class="card-img-top fakeimg" src="" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card bg-primary text-white text-center p-3">
-      <blockquote class="blockquote mb-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-        <footer class="blockquote-footer">
-          <small>
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card text-center">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img fakeimg" src="" alt="Card image">
-    </div>
-    <div class="card p-3 text-right">
-      <blockquote class="blockquote mb-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <footer class="blockquote-footer">
-          <small class="text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
           <div class="row">
