--- a/about.html
+++ b/about.html
@@ -68,8 +68,10 @@
 
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">ABOUT</h3>
-        <p id="welcome">I am a dog-with-a-blog, but unironically.</p>
+        <div class="container-fluid">
+          <p><strong>TL:DR?</strong> Here is my <a href="Documents/demarco-resume-april-2018.pdf">resume</a>, last updated April of 2018.</p>
         </div>
+    </div>
 
         <div class="container-fluid" style="margin-bottom:0px;" id="footer">
           <div class="row">
