--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">ABOUT</h3>
-        <div class="container-fluid">
+        <div class="container-fluid" id="biography">
           <p><strong>TL:DR?</strong> Here is my <a href="Documents/demarco-resume-april-2018.pdf">resume</a>, last updated April of 2018.</p>
         </div>
     </div>
