Portfolio page update

--- a/projects.html
+++ b/projects.html
@@ -68,17 +68,17 @@
 
     <div class="container-fluid" id="welcome-panel">
       <h3 id="welcome" style="margin-top:50px;margin-bottom:50px;letter-spacing: 5px;">PROJECTS</h3>
-        <p id="welcome">Here is a mix of my writing, graphic design, and other projects that are worth showing the world.</p>
-        </div>
+      <p id="welcome">Here is a mix of my writing, graphic design, and other projects that are worth showing the world. Also, <a href="Documents/DeMarco-GraphicDeisign-Sept7.pdf" target="_blank">here's</a> a mini-resume capturing most of my graphic design work, last updated September 7th, 2018.</p>
+    </div>
 
     <div class="container-fluid" style="max-width:1200px;" id="projectCards">
         <div class="card-columns">
 
           <div class="card">
-            <img class="card-img-top" src="Images/cslc-logo-regular.jpg" alt="CSLC 2018">
+            <img class="card-img-top" src="Images/cslc-logo-portfolio-01.jpg" alt="CSLC 2018">
             <div class="card-body">
-              <h5 class="card-title">CSLC 2018 Design</h5>
-              <p class="card-text">I assisted with some of the branding with the Canadian Student Leadership Conference (2018).</p>
+              <h5 class="card-title">CSLC 2018 Logo Concept</h5>
+              <p class="card-text">I assisted with some of the branding with the Canadian Student Leadership Conference (2018). Here you can see my original, unfinished logo concept (left) beside the final logo (right) created by a professional graphic designer working at Harry Ainlay.</p>
             </div>
           </div>
 
@@ -97,30 +97,158 @@
             <img class="card-img-top" src="Images/staffspeaks-01.jpg" alt="SUNIA Branding">
             <div class="card-body">
               <h5 class="card-title">SUNIA Design</h5>
-              <p class="card-text">I am actively helping with the branding of SUNIA, an annual week-long summer camp.</p>
+              <p class="card-text">I am actively helping with the branding of SUNIA, an annual week-long summer camp. Above is a banner I created for our blog series called "Staff Speaks."</p>
             </div>
           </div>
 
           <div class="card">
             <img class="card-img-top" src="Images/infographic-01.jpg" alt="Italy infographic">
             <div class="card-body">
-              <h5 class="card-title">McNally Event Branding</h5>
-              <p class="card-text">A collection of the design I've done for McNally projects.</p>
+              <h5 class="card-title">McNally Heritage Festival Inforgraphic</h5>
+              <p class="card-text">Above is an Italy inforgraphic I created for my school's heritage festival inspired event.</p>
             </div>
           </div>
 
           <div class="card text-left">
             <div class="card-body">
               <h5 class="card-title">Far-Right Populism: Globalization's Troubling Consequence</h5>
-              <p class="card-text">'The resurgence of the far-right is inextricably linked to the zenith of third-wave globalization. The development of income inequality...' My grade ten research assignment explores globalization as a cause of populism.</p>
+              <p class="card-text">'The resurgence of the far-right is inextricably linked to the zenith of third-wave globalization. The development of income inequality...' My grade ten research assignment explores globalization as a cause of populism. Click to read more!</p>
             </div>
           </div>
 
           <div class="card">
-            <img class="card-img-top" src="Images/711_logo_demarco.jpg" alt="Illustrator Logo">
+            <img class="card-img-top" src="Images/DeMarco-design.jpg" alt="Illustrator Logo">
             <div class="card-body">
-              <h5 class="card-title">Illustrator Mix</h5>
-              <p class="card-text">Random projects created in Adobe Illustrator.</p>
+              <h5 class="card-title">Design Company Logo Concept</h5>
+              <p class="card-text">Here's a design company logo I created in grade seven; it was my first ever logo!</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/a-boat-01-edit.jpg" alt="Poem Poster">
+            <div class="card-body">
+              <h5 class="card-title">Poster for Lewis Carroll Poem</h5>
+              <p class="card-text">While practicing making posters and studying posters, I created this poster for Lewis Carroll's 'A Boat Beneath a Sunny Sky.'</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/bikeathon-geofilter-01.jpg" alt="Bike-a-thon Geofilter">
+            <div class="card-body">
+              <h5 class="card-title">Bike-a-thon Geofilter</h5>
+              <p class="card-text">Above is a geofilter I created for our annual Bike-a-thon event at McNally.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/bikeathon-logo-2017-01.jpg" alt="Bike-a-thon Logo 2017">
+            <div class="card-body">
+              <h5 class="card-title">Bike-a-thon Logo (2017)</h5>
+              <p class="card-text">Here is a logo concept I created for McNally's Bike-a-thon in 2017.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/bikeathon-logo-2018-01.jpg" alt="Bike-a-thon Logo 2018">
+            <div class="card-body">
+              <h5 class="card-title">Bike-a-thon Logo (2018)</h5>
+              <p class="card-text">Additionally, here is a logo concept I created for McNally's Bike-a-thon in 2018.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/bikeathon-team-covers-25.jpg" alt="Bike-a-thon Team Cover">
+            <div class="card-body">
+              <h5 class="card-title">Bike-a-thon Team Card</h5>
+              <p class="card-text">Above is an example Bike-a-thon team cover.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/blood-sweat-gears-01.jpg" alt="Bike-a-thon Team Logo">
+            <div class="card-body">
+              <h5 class="card-title">Bike-a-thon Team Logo</h5>
+              <p class="card-text">Here is a little logo I created for my Bike-a-thon team, 'Blood, Sweat, & Gears.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/dagon-logo-01.jpg" alt="Dagon J.B.P. Logo">
+            <div class="card-body">
+              <h5 class="card-title">Dagon J.B.P. Logo</h5>
+              <p class="card-text">This is a title card I created for a friend's YouTube channel.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/demarcodesign-deer.jpg" alt="DeMarco Design Wallpaper">
+            <div class="card-body">
+              <h5 class="card-title">DeMarco Design Wallpaper</h5>
+              <p class="card-text">A simple deer-inspired wallpaper concept.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-blur.jpg" alt="Blur Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Blur Photoshop Project</h5>
+              <p class="card-text">A Photoshop project I created using a simple blur.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-disc.jpg" alt="Disc Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Disc Photoshop Project</h5>
+              <p class="card-text">A Photoshop project showing an example album disc.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-face.jpg" alt="Faceswap Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Faceswap Photoshop Project</h5>
+              <p class="card-text">A simple faceswap done in Photoshop.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-focus.jpg" alt="Focus Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Focus Photoshop Project</h5>
+              <p class="card-text">A simple Photoshop edit of Christiano Ronaldo.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-heat.jpg" alt="Heat Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Heat Photoshop Project</h5>
+              <p class="card-text">A simple Photoshop edit of Lebron James.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-funny.jpg" alt="Funny Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Funny Photoshop Project</h5>
+              <p class="card-text">A Photoshop edit with a sense of humor!</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-motion.jpg" alt="Motion Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Motion Photoshop Project</h5>
+              <p class="card-text">A Photoshop edit to speed up this car.</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src="Images/DeMarco-wallpaper.jpg" alt="Animal Wallpaper Photoshop Project">
+            <div class="card-body">
+              <h5 class="card-title">Animal Wallpaper Photoshop Project</h5>
+              <p class="card-text">An animal wallpaper created in photoshop.</p>
             </div>
           </div>
 
