--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://blog.michaeldemar.co">BLOG</a>
+            <a class="nav-link" href="http://blog.michaeldemar.co">BLOG</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="experience.html">EXPERIENCE</a>
